policies/disallow-privileged.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privileged
spec:
  validationFailureAction: Enforce
  background: true

  rules:
  - name: check-privileged
    match:
      any:
      - resources:
          kinds:
          - Pod

    exclude:
      any:
      - resources:
          namespaces:
          - kube-system
          - kyverno

    validate:
      message: "Privileged containers are not allowed."
      pattern:
        spec:
          containers:
          - =(securityContext):
              =(privileged): false
